--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,5 +3,55 @@
     "intro": "Made with",
     "use": "using",
     "author": "by {brand} Developer Team"
+  },
+  "request": {
+    "title": "Service Requests",
+    "formTitle": "Create New Request",
+    "clientId": "Client ID",
+    "technicianId": "Technician ID",
+    "propertyId": "Property ID",
+    "serviceId": "Service ID",
+    "description": "Problem Description",
+    "scheduledDate": "Scheduled Date",
+    "electricBill": "Electric Bill",
+    "photos": "Attached Photos",
+    "noRequests": "No service requests found.",
+    "billInfo": "Bill Information:",
+    "billingPeriod": "Billing Period",
+    "energyConsumed": "Energy Consumed (kWh)",
+    "amountPaid": "Amount Paid",
+    "billImageUrl": "Bill Image URL",
+    "problemDescription": "Problem Description"
+  },
+  "schedule": {
+    "title": "Service Schedule",
+    "submit": "Create Schedule",
+    "formTitle": "Create New Schedule",
+    "technicianId": "Technician ID",
+    "startTime": "Start Time",
+    "day": "Day",
+    "endTime": "End Time"
+  },
+  "service": {
+    "title": "Services",
+    "formTitle": "Create New Service",
+    "createTitle": "Register New Service",
+    "name": "Service Name",
+    "description": "Description",
+    "basePrice": "Base Price (USD)",
+    "estimatedTime": "Estimated Time",
+    "category": "Category",
+    "isVisible": "Is Visible",
+    "createdBy": "Created By",
+    "cancellationPolicy": "Cancellation Policy",
+    "termsAndConditions": "Terms and Conditions",
+    "unavailableDistricts": "Unavailable Districts",
+    "forbiddenDays": "Forbidden Days",
+    "requiresSpecialCertification": "Requires Special Certification",
+    "tags": "Tags",
+    "components": "Components",
+    "submit": "Create Service",
+    "created": "Service created successfully!",
+    "createError": "There was an error creating the service."
   }
 }
