--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -3,5 +3,54 @@
     "intro": "Hecho con",
     "use": "utilizando",
     "author": "por el Equipo de Desarrollo de {brand}"
+  },
+  "request": {
+    "title": "Solicitudes de Servicio",
+    "formTitle": "Crear Nueva Solicitud",
+    "clientId": "ID del Cliente",
+    "technicianId": "ID del Técnico",
+    "propertyId": "ID de la Propiedad",
+    "serviceId": "ID del Servicio",
+    "description": "Descripción del Problema",
+    "scheduledDate": "Fecha Programada",
+    "electricBill": "Recibo de Electricidad",
+    "photos": "Fotos Adjuntas",
+    "noRequests": "No se encontraron solicitudes de servicio.",
+    "billInfo": "Información del Recibo:",
+    "billingPeriod": "Periodo de Facturación",
+    "energyConsumed": "Energía Consumida (kWh)",
+    "amountPaid": "Monto Pagado",
+    "billImageUrl": "URL del Recibo"
+  },
+  "schedule": {
+    "title": "Horario de Servicio",
+    "submit": "Crear Horario",
+    "formTitle": "Crear Nuevo Horario",
+    "technicianId": "ID del Técnico",
+    "startTime": "Hora de Inicio",
+    "day": "Día",
+    "endTime": "Hora de Fin"
+  },
+  "service": {
+    "title": "Servicios",
+    "formTitle": "Crear Nuevo Servicio",
+    "createTitle": "Registrar Nuevo Servicio",
+    "name": "Nombre del Servicio",
+    "description": "Descripción",
+    "basePrice": "Precio Base (USD)",
+    "estimatedTime": "Tiempo Estimado",
+    "category": "Categoría",
+    "isVisible": "¿Visible?",
+    "createdBy": "Creado Por",
+    "cancellationPolicy": "Política de Cancelación",
+    "termsAndConditions": "Términos y Condiciones",
+    "unavailableDistricts": "Distritos No Disponibles",
+    "forbiddenDays": "Días Restringidos",
+    "requiresSpecialCertification": "Requiere Certificación Especial",
+    "tags": "Etiquetas",
+    "components": "Componentes",
+    "submit": "Crear Servicio",
+    "created": "¡Servicio creado exitosamente!",
+    "createError": "Hubo un error al crear el servicio."
   }
 }
